--- a/src/components/blogs/styles.scss
+++ b/src/components/blogs/styles.scss
@@ -27,6 +27,7 @@
         transition: transform 0.3s ease;
         transform: scale(0.8);
         opacity: 0.6;
+        cursor: pointer;
   
         &.active {
           transform: scale(1);
