--- a/src/components/landing/styles.scss
+++ b/src/components/landing/styles.scss
@@ -16,8 +16,8 @@
         margin-bottom: 20px;
   
       h1 {
-        font-size: 24px;
-        margin-bottom: 10px;
+        font-size: 36px;
+        margin-bottom: 5px;
       }
   
       h2 {
@@ -31,15 +31,16 @@
       align-items: center;
   
       input[type="text"] {
-        padding: 10px;
+        padding: 20px;
         border: 1px solid #ccc;
         border-radius: 5px;
         margin-right: 10px;
+        width: 400px;
       }
   
       button {
-        padding: 10px 20px;
-        background-color: #007bff;
+        padding: 20px 40px;
+        background-color: red;
         color: #fff;
         border: none;
         border-radius: 5px;
