update footer and adding pages for about and contact

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,43 +1,64 @@
-// Footer.scss
 .footer {
     background-color: #333;
     color: #fff;
-    padding: 40px 0;
-  
-    .footer-container {
+    padding: 50px 0;
+    .footer__container {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
       max-width: 1200px;
       margin: 0 auto;
-  
-      .footer-column {
+      .footer__section {
         flex: 1;
-        margin-right: 20px;
-  
-        h3 {
-          margin-bottom: 15px;
+        &:not(:last-child) {
+          margin-right: 20px;
         }
-  
-        ul {
-          list-style: none;
+        .footer__title {
+          font-size: 1.2rem;
+          margin-bottom: 20px;
+        }
+        .footer__contact-info {
+          font-size: 0.9rem;
+        }
+        .footer__links {
+          list-style-type: none;
           padding: 0;
-  
           li {
             margin-bottom: 10px;
-  
             a {
               color: #fff;
               text-decoration: none;
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+        .footer__social-links {
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
+          display: flex;
+          li {
+            margin-right: 10px;
+            &:last-child {
+              margin-right: 0;
+            }
+            a {
+              color: #fff;
+              text-decoration: none;
+              font-size: 1.2rem;
+              &:hover {
+                opacity: 0.8;
+              }
             }
           }
         }
       }
     }
-  
-    .footer-bottom {
+    .footer__copyright {
       text-align: center;
-      margin-top: 20px;
+      padding-top: 20px;
+      font-size: 0.8rem;
     }
   }
   
