--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -22,9 +22,12 @@
         display: inline-block;
         margin-left: 20px;
         cursor: pointer;
-        
-        &:hover {
-          text-decoration: underline;
+        a {
+          color: #fff;
+          text-decoration: none;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
